# JukeBerry

./: .gitignore  Cargo.toml  LICENSE  README.md  config.cfg  nbactions.xml  pom.xml
src/: main.rs
src/main/java/com/baystep/jukeberry/: BerryLogger.java  BerryMusic.java  JsonConfiguration.java  JukeBerry.java  LogFormatter.java
src/main/java/com/baystep/jukeberry/musicplayer/: LocalSource.java  MusicListing.java  MusicPlayer.java  RefreshLocalListings.java  Source.java  SourceDescription.java
src/main/java/com/baystep/webservices/: SocketServer.java  WebServer.java
www/: index.html
